Swagger changes for ENV paths
